cabal-version:      3.0
name:               cryptopals
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Christopher Milan
maintainer:         chrismilan@ucla.edu
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable cryptopals
    import:           warnings
    main-is:          Main.hs
    other-modules:    Set1, Enc, Helpers
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010
